# NuSMV/doc/prog-man/txt/meson.build

prog_man_txt = custom_target(
  'extract',
  output: [
    'add_propertyCmd.txt',
    'bmc_inc_simulateCmd.txt',
    'bmc_setupCmd.txt',
    'bmc_simulateCmd.txt',
    'build_boolean_modelCmd.txt',
    'build_flat_modelCmd.txt',
    'build_modelCmd.txt',
    'check_computeCmd.txt',
    'check_ctlspecCmd.txt',
    'check_fsmCmd.txt',
    'check_invarCmd.txt',
    'check_ltlspecCmd.txt',
    'check_ltlspec_sbmcCmd.txt',
    'check_ltlspec_sbmc_incCmd.txt',
    'check_propertyCmd.txt',
    'check_pslspecCmd.txt',
    'computeCmd.txt',
    'compute_reachableCmd.txt',
    'convert_property_to_invarCmd.txt',
    'dump_fsmCmd.txt',
    'dynamic_var_orderingCmd.txt',
    'encode_variablesCmd.txt',
    'execute_partial_tracesCmd.txt',
    'execute_tracesCmd.txt',
    'flatten_hierarchyCmd.txt',
    'gen_ltlspec_sbmcCmd.txt',
    'get_internal_statusCmd.txt',
    'go_bmcCmd.txt',
    'goCmd.txt',
    'goto_stateCmd.txt',
    'hrc_dump_modelCmd.txt',
    'hrc_write_modelCmd.txt',
    'language_emptinessCmd.txt',
    'optionalCmd.txt',
    'pick_stateCmd.txt',
    'print_bdd_statsCmd.txt',
    'print_current_stateCmd.txt',
    'print_fair_statesCmd.txt',
    'print_fair_transitionsCmd.txt',
    'print_fsm_statsCmd.txt',
    'print_iwls95optionsCmd.txt',
    'print_reachable_statesCmd.txt',
    'print_usageCmd.txt',
    'process_modelCmd.txt',
    'read_traceCmd.txt',
    'resetCmd.txt',
    'set_bdd_parametersCmd.txt',
    'show_dependenciesCmd.txt',
    'show_pluginsCmd.txt',
    'show_propertyCmd.txt',
    'show_tracesCmd.txt',
    'show_varsCmd.txt',
    'simulateCmd.txt',
    'write_boolean_modelCmd.txt',
    'write_coi_modelCmd.txt',
    'write_flat_modelCmd.txt',
    'write_flat_model_udgCmd.txt',
    'write_orderCmd.txt',
  ],
  input: prog_man_html,
  command: [
    python, extract_doc_py,
    '-s', fs.parent(prog_man_html),
    '-d', meson.current_build_dir(),
  ],
  build_by_default: build_doc_ft.enabled(),
  install: true,
  install_dir: datadir / 'doc/prog-man/txt',
  install_tag: 'doc',
)
