core_c += files(
  'sbmc/sbmcBmc.c',
  'sbmc/sbmcBmcInc.c',
  'sbmc/sbmcGen.c',
  'sbmc/sbmcHash.c',
  'sbmc/sbmcNodeStack.c',
  'sbmc/sbmcPkg.c',
  'sbmc/sbmcStructs.c',
  'sbmc/sbmcTableau.c',
  'sbmc/sbmcTableauInc.c',
  'sbmc/sbmcTableauIncLTLformula.c',
  'sbmc/sbmcTableauLTLformula.c',
  'sbmc/sbmcUtils.c',

  'bmcBmcInc.c',
  'bmcBmcNonInc.c',
  'bmcCheck.c',
  'bmcConv.c',
  'bmcDump.c',
  'bmcGen.c',
  'bmcInt.c',
  'bmcModel.c',
  'bmcOpt.c',
  'bmcPkg.c',
  'bmcSimulate.c',
  'bmcTableau.c',
  'bmcTableauLTLformula.c',
  'bmcTableauPLTLformula.c',
  'bmcTest.c',
  'bmcTrace.c',
  'bmcUtils.c',
)
