core_c += files(
  'dependency/DependencyBase.c',
  'dependency/DependencyCore.c',
  'dependency/DependencyPsl.c',
  'dependency/dependencyPkg.c',
  'dependency/FormulaDependency.c',

  'flattening/FlattenerBase.c',
  'flattening/FlattenerCore.c',
  'flattening/flatteningPkg.c',
  'flattening/MasterCompileFlattener.c',

  'symb_table/NFunction.c',
  'symb_table/ResolveSymbol.c',
  'symb_table/SymbCache.c',
  'symb_table/SymbLayer.c',
  'symb_table/symb_table.c',
  'symb_table/SymbTable.c',
  'symb_table/SymbType.c',
  'symb_table/symb_table_filters.c',

  'type_checking/TypeChecker.c',
  'type_checking/checkers/CheckerBase.c',
  'type_checking/checkers/CheckerCore.c',
  'type_checking/checkers/CheckerPsl.c',
  'type_checking/checkers/checkersInt.c',
  'type_checking/checkers/CheckerStatement.c',
  'type_checking/type_in_expr_walkers/TypeInExprBase.c',
  'type_checking/type_in_expr_walkers/TypeInExprCore.c',

  'pne/PredicateNormaliserBase.c',
  'pne/PredicateNormaliserCore.c',
  'pne/pnePkg.c',
  'pne/MasterCompilePredicateNormaliser.c',
  'pne/PredicateExtractorBase.c',
  'pne/PredicateExtractorCore.c',
  'pne/MasterCompilePredicateExtractor.c',

  'compileBEval.c',
  'compile.c',
  'compileCheck.c',
  'compileCone.c',
  'compileExpr.c',
  'compileFlatten.c',
  'compileHrc.c',
  'compilePkg.c',
  'compileStruct.c',
  'compileUtil.c',
  'compileWrite.c',
  'compileWriteUdg.c',
  'FlatHierarchy.c',
)
