core_c += files(
  'dumpers/HrcDumper.c',
  'dumpers/HrcDumperDebug.c',
  'dumpers/HrcDumperSmv.c',
  'dumpers/HrcDumperXml.c',
  'dumpers/HrcDumperAnonymizer.c',

  'hrc.c',
  'hrcDump.c',
  'HrcFlattener.c',
  'HrcNode.c',
  'hrcPrefixUtils.c',
  'hrcSymbTableUtils.c',
  'HrcVarDependencies.c',
  'hrcWrite.c',
)
