core_c += files(
  'normalizers/MasterNormalizer.c',
  'normalizers/NormalizerBase.c',
  'normalizers/NormalizerCore.c',
  'normalizers/NormalizerPsl.c',

  'printers/MasterPrinter.c',
  'printers/PrinterBase.c',
  'printers/PrinterIWffCore.c',
  'printers/PrinterPsl.c',
  'printers/PrinterSexpCore.c',
  'printers/PrinterWffCore.c',

  'anonymizers/NodeAnonymizerST.c',
  'anonymizers/NodeAnonymizerAtom.c',
  'anonymizers/NodeAnonymizerBase.c',
  'anonymizers/NodeAnonymizerDot.c',
  'anonymizers/PrinterNonAmbiguousDot.c',

  'node.c',
  'MasterNodeWalker.c',
  'NodeMgr.c',
  'nodePkg.c',
  'nodePrint.c',
  'NodeWalker.c',
  'nodeWffPrint.c',
)
