# NuSMV/code/nusmv/core/wff/meson.build

core_c += files(
  'w2w/wff2nnf.c',

  'lr/LogicRecognizerBase.c',
  'lr/LogicRecognizerCore.c',
  'lr/MasterLogicRecognizer.c',

  'wffPkg.c',
  'exprWff.c',
  'ExprMgr.c',

  'rewriters/MasterWffRewriter.c',
  'rewriters/WffRewriterBase.c',
  'rewriters/WffRewriterCore.c',
)
