# subprojects/packagefiles/cudd-2.4.1/util/meson.build

util_inc = include_directories(
  '.',
)

util_h = files(
  'util.h',
)

util_c = files(
  'cpu_stats.c',
  'cpu_time.c',
  'datalimit.c',
  'getopt.c',
  'pathsearch.c',
  'pipefork.c',
  'prtime.c',
  'ptime.c',
  'safe_mem.c',
  'strsav.c',
  'stub.c',
  'texpand.c',
  'tmpfile.c',
)
